# value_horses

./: .env.example  .gitignore  CLAUDE.md  PROJECT.md  README.md  pyproject.toml  requirements.txt
config/: settings.py
db/: models.py
db/migrations/: 001_initial_schema.sql  README.md
docs/: DISENO_BD.md  PLAN_SCRAPING.md  ROADMAP.md
engine/: matching.py  pricing.py  signals.py
scrapers/: teletrak_discovery.py  teletrak_odds.py  teletrak_program.py  versus_discovery.py  versus_odds.py
scripts/: run_engine_loop.py  run_scrapers_loop.py  run_settlement.py
settlement/: results_scraper.py  settle_paper.py
utils/: normalization.py  timezone.py
